Fix label spacing on hearing page
Refs: #186

--- a/assets/less/hel/common.less
+++ b/assets/less/hel/common.less
@@ -71,10 +71,11 @@ main {
 }
 
 .main-labels {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     .label {
         font-size: 75%;
         margin-right: 10px;
+        margin-bottom: 10px;
     }
 }
 
